@@ -1,3 +1,8 @@
+2007-03-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Module.cpp: show configuration parameters
+	when started up from console.
+
 2007-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_sig/src/Vector.cpp: Lorenzo fixed a bug,
